DPO-2716 waze muutoksia (#213)
* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 fix typo

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 fix typo

* DPO-2716 if no workphases are converted, convert the whole situation

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 fix typo

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 convert roadWorkPhases to waze incidents

* DPO-2716 test for lane closed

* DPO-2716 if no workphases are converted, convert the whole situation

* DPO-2716 more tests

* DPO-2716 review fixes

* DPO-2716 check phase validity, get description from the phase

* DPO-2716 get ROAD_CLOSED_CONSTRUCTION duration from first active road closed phase